Aggiunta nuova funzione di login

--- a/index.html
+++ b/index.html
@@ -157,7 +157,12 @@
       onclick="if(event.target===this) closeDifferenzaPrecedentePopup()"
     ></div>
 
-    <div id="dragPreview" class="drag-preview" style="display: none"></div>
+    <!-- Elemento drag preview migliorato -->
+    <div id="dragPreview" class="drag-preview" style="display: none">
+      <!-- Il contenuto verrà generato dinamicamente dal JavaScript -->
+    </div>
+    
+    <!-- Indicatore di posizione durante il drag & drop -->
     <div id="dropIndicator" class="drop-indicator"></div>
 
     <!-- Caricamento di Handsontable -->
